# kortny

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  compose.prod.yaml  compose.yaml  pyproject.toml  viktor_cross_examination.md
.github/workflows/: ci.yml  release.yml
docker/: entrypoint.sh  kortny.Dockerfile  sandbox-exec.Dockerfile
docs/: demo.md  schema.dbml
kortny/: approvals.py  pdf_raster.py  persona.py  schedule_intent.py  slack_mrkdwn.py
kortny/agent/: __init__.py  adk_runtime.py  adk_tools.py  attachment_parsing.py  capabilities.py  context.py  coordinator.py  error_policy.py  execution.py  image_attachments.py  planner.py  runtime.py  trifecta.py
kortny/ambient/: supervisor.py
kortny/browser/: session.py
kortny/composio/: __init__.py  catalog_sync.py  client.py  provider.py  runtime.py  tool_cards.py  trigger_ingress.py  triggers.py
kortny/config/: settings.py
kortny/consolidator/: __init__.py  __main__.py  org_profile.py  passes.py  project_inference.py  promotion.py  runner.py  service.py  skill_induction.py  style_cards.py  trigger.py  user_profile.py
kortny/dashboard/: app.py  auth.py  data.py  knowledge_graph_actions.py  mcp_actions.py  mcp_data.py  memory_actions.py  schedules.py  settings.py  skills_actions.py  skills_data.py
kortny/db/: models.py
kortny/documents/: __init__.py  canvas_writer.py  charts.py  critique.py  docx_writer.py  ir.py  pptx_writer.py  render.py  revision.py  themes.py  typst_writer.py  xlsx_writer.py
kortny/embeddings/: __init__.py  backends.py  index.py  memory_texts.py  ranking.py
kortny/evals/: __init__.py  __main__.py  cases.py  providers.py  runner.py  scoring.py
kortny/execution/: __init__.py  codeact_rpc.py  preview.py  sandbox_runner_client.py
kortny/integration_learning/: backfill.py  profiler_worker.py  profiles.py
kortny/integrations/: top25.py
kortny/intent/: __init__.py  classifier.py  depth_overrides.py  models.py  persona_gate.py  policy.py  prompts.py  service.py
kortny/knowledge_graph/: __init__.py  channel_refresh.py  extraction.py  project_proposals.py  projects.py  provenance.py  refresh.py  reinforcement.py  scopes.py  service.py  task_summary.py
kortny/llm/: __init__.py  capabilities.py  errors.py  litellm_catalog.py  litellm_provider.py  message_payload.py  model_ids.py  openrouter.py  provider_config.py  routing.py  runtime_config.py  service.py  types.py
kortny/mcp/: description_quality.py  provider.py  sessions.py
kortny/memory/: __init__.py  episodes.py  service.py
kortny/observability/: __init__.py  content.py  events.py  tracing.py
kortny/observe/: __init__.py  ambient_files.py  assessment.py  profiles.py  service.py  style_cards.py
kortny/prompts/: __init__.py  registry.py
kortny/routing/: __init__.py  quality.py  semantic.py  tool_scope.py  trace.py
kortny/sandbox_runner/: __init__.py  app.py  docker_api.py  gc.py  sessions.py
kortny/scheduler/: commands.py  creation.py  llm_parser.py  service.py
kortny/skills/: __init__.py  builtins.py  ingestion.py  service.py  skill_models.py
scripts/: __init__.py
tests/: conftest.py  db_safety.py  test_adk_runtime.py  test_adk_tools.py  test_agent_coordinator.py  test_agent_error_policy.py  test_ambient_files.py  test_ambient_supervisor.py  test_assistant_status.py  test_autonomy_providers.py  test_browser_session.py  test_browser_tools.py  test_capabilities.py  test_capabilities_profile.py  test_capability_eval.py  test_capability_fabric.py  test_channel_isolation.py  test_code_exec_tool.py  test_codeact_rpc.py  test_codeact_security.py  test_composio_catalog_sync.py  test_composio_client.py  test_composio_provider_retrieval.py  test_composio_runtime.py  test_composio_tool_disclosure.py  test_composio_trigger_ingress.py  test_composio_trigger_webhook.py  test_connected_integrations.py  test_connected_tool_loader.py  test_consolidator.py  test_consolidator_migration.py  test_consolidator_org_profile.py  test_consolidator_slack_helpers.py  test_consolidator_trigger.py  test_consolidator_user_profile.py  test_context_document.py  test_context_persona.py  test_context_ranking.py  test_cost_caps.py  test_dashboard.py  (+128 more)
(+215 files in other folders)
