[project]
name = "kortny"
version = "0.1.0"
description = "Self-hosted AI coworker for teams who live in Slack."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Kortny Contributors" }]
dependencies = [
    "alembic>=1.13",
    "cryptography>=48.0",
    "fastapi>=0.136",
    "fastembed>=0.8.0",
    "google-adk>=2.0",
    "google-cloud-storage>=3.11.0",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "litellm>=1.83",
    "mcp>=1.27.2",
    "opentelemetry-api>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "opentelemetry-sdk>=1.28",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.32",
    "reportlab>=4.4",
    "slack-bolt>=1.20",
    "sqlalchemy>=2.0",
    "temporalio>=1.10",
    "typst>=0.15.0",
    "uvicorn>=0.47",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.8.0",
    "ruff>=0.5",
    "tomli>=2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    # Curated-skill helper scripts are sandbox-only assets (heavy optional deps,
    # not imported by Kortny); linting them here would gate on tools absent from
    # the dev/CI environment.
    "kortny/skills/curated/*/scripts",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
# tests/ is a namespace package imported as tests.* (conftest); without this
# mypy maps tests/db_safety.py to both "db_safety" and "tests.db_safety".
explicit_package_bases = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
    # Curated-skill helper scripts run only inside the trusted-tier sandbox,
    # against deps (Pillow, pandas, weasyprint, …) absent from the dev/CI
    # environment. They are shipped as skill assets, not imported by Kortny, so
    # they are out of scope for the repo-wide strict typecheck.
    "^kortny/skills/curated/.*/scripts/",
]

[[tool.mypy.overrides]]
# pgvector ships no py.typed marker; its SQLAlchemy Vector type is Any-typed.
module = ["pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
